# EclipseBackend

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  tree.txt
app/: classes.py  data.csv  data.txt  main.py  output.pstats  restats  test.py  utils.py
c_src/ElpMpp02/: ElpMpp02Module.cpp  Makefile  example.cpp  myprogram  record.txt  setup.py
c_src/ElpMpp02/ElpMpp02Module.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
c_src/elp2000_82b/: Makefile  elp2000-82bmodule.c  elp2000.pyi  main.py  setup.py
c_src/elp2000_82b/Elp2000Module.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
c_src/spice/: setup.py  spice.pyi  spicemodule.c
c_src/spice/spice.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
c_src/spice/spicemodule.egg-info/: PKG-INFO  SOURCES.txt
c_src/spice/utils/: downloader.py
f_src/elp2000_82b/: ELP36  elp82b.f  elp82b.pyf  example.f  index.html  test.py  vizieRwget.sh
