[tool.poetry]
name = "eclipsebackend"
version = "0.1.0"
description = "Solar Eclipse visualizer backend"
authors = ["Alan Shipman <shipmaal@bc.edu>"]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
annotated-types = "0.6.0"
anyio = "4.3.0"
astropy = "6.0.1"
astropy-iers-data = "0.2024.4.8.0.32.4"
basemap = "1.4.1"
basemap-data = "1.3.2"
basemap-data-hires = "1.3.2"
certifi = "2024.2.2"
click = "8.1.7"
contourpy = "1.2.1"
cycler = "0.12.1"
dnspython = "2.6.1"
email-validator = "2.1.1"
exceptiongroup = "1.2.0"
fastapi = "0.110.1"
fonttools = "4.51.0"
h11 = "0.14.0"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.27.0"
idna = "3.6"
itsdangerous = "2.1.2"
jinja2 = "3.1.3"
jplephem = "2.21"
kiwisolver = "1.4.5"
markupsafe = "2.1.5"
matplotlib = "3.8.4"
mpmath = "1.3.0"
numpy = "1.26.4"
orjson = "3.10.0"
packaging = "23.2"
pandas = "2.2.2"
pillow = "10.3.0"
pydantic = "2.6.4"
pydantic-extra-types = "2.6.0"
pydantic-settings = "2.2.1"
pydantic-core = "2.16.3"
pyerfa = "2.0.1.3"
pyparsing = "3.1.2"
pyproj = "3.6.1"
pyshp = "2.3.1"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
pytz = "2024.1"
pyyaml = "6.0.1"
scipy = "1.13.0"
six = "1.16.0"
snakeviz = "2.2.0"
sniffio = "1.3.1"
starlette = "0.37.2"
sympy = "1.12"
tornado = "6.4"
typing-extensions = "4.11.0"
tzdata = "2024.1"
ujson = "5.9.0"
uvicorn = "0.29.0"
uvloop = "0.19.0"
watchfiles = "0.21.0"
websockets = "12.0"
requests = "^2.31.0"
poetry = "^1.8.3"
install = "^1.3.5"
bs4 = "^0.0.2"
wheel = "^0.43.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
